feat: added endpoint to list history of logged user
